Windows build now includes the managed bits

--- a/src/pl/plclr/managed/PlClrManaged.csproj
+++ b/src/pl/plclr/managed/PlClrManaged.csproj
@@ -26,4 +26,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove=".gitignore" />
+  </ItemGroup>
 </Project>
