--- a/src/pl/plclr/managed/src/PlClr.Managed/PlClr.Managed.csproj
+++ b/src/pl/plclr/managed/src/PlClr.Managed/PlClr.Managed.csproj
@@ -25,8 +25,12 @@
     <LangVersion>8.0</LangVersion>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Nullable>enable</Nullable>
+    <RootNamespace>PlClr</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <None Remove=".gitignore" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.4.0" />
   </ItemGroup>
 </Project>
