Major restructuring of the managed code. Still WIP.

--- a/src/pl/plclr/managed/src/PlClr.Managed/PlClr.Managed.csproj
+++ b/src/pl/plclr/managed/src/PlClr.Managed/PlClr.Managed.csproj
@@ -26,6 +26,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Nullable>enable</Nullable>
     <RootNamespace>PlClr</RootNamespace>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <None Remove=".gitignore" />
